# tetris-ai-rust

./: Cargo.toml  README.md  setup_env.sh  test_term.cpp
data/: first_todo.txt
src/: agent.rs  config.rs  lib.rs  main.rs  model.rs  shapes.rs  tetrimino.rs  train.rs  utils.rs
src/agent/: core.rs  dqn.rs  mcts_qn.rs  mod.rs
tests/: model.rs  train.rs
