[package]
name = "rl-tetris-rust"
version = "0.1.0"
authors = ["Nick Linker <nlinker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tetris"

[[bin]]
name = "tetris-app"
path = "src/main.rs"

[dependencies]
itertools = "0.8"
lazy_static = "1.3.0"
rand = "0.7.0"
rand_xoshiro = "0.3.0"
console = "0.7.7"
termios = "0.3.1"
